<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="horizontal|vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <EditText
            android:id="@+id/description_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:inputType="textUri"
            android:lines="4"
            android:text="" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/serverurl_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serverurl" />

        <EditText
            android:id="@+id/serverurl_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:inputType="textUri"
            android:lines="4"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/targetresource_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/targetresource" />

        <EditText
            android:id="@+id/targetresource_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:inputType="text"
            android:text="" />
    </LinearLayout>

     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/params_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/params" />

        <EditText
            android:id="@+id/params_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:inputType="text"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/saverequestid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saverequest" />

        <Button
            android:id="@+id/dorequestid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dorequest" />
    </LinearLayout>

    <EditText
        android:id="@+id/resultid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollHorizontally="true"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:lines="4"
        android:text="" />

</LinearLayout>
</ScrollView>
